<resources>
    <string name="app_name"> Mi carrera</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ajustes</string>
    <string name="searchInputHint">Buscar...</string>

    <string name="test_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\nUt enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="test_title">Lorem ipsum dolor sit amet</string>

    <string name="course_context_title">Materia</string>
    <string name="course_context_schedule">Ver horarios</string>
    <string name="course_context_studying">Marcar como cursando</string>
    <string name="course_context_approved">Marcar como aprobada</string>
    <string name="course_context_favourite">Marcar como favorita</string>
    <string name="course_context_department">Ver departamento</string>

    <string name="studying">Cursando</string>
    <string name="approved">Aprobada</string>
    <string name="favourite">Favorita</string>
    <string name="eligible">Podés cursar</string>

    <string name="news_context_title">Eventos</string>
    <string name="news_context_pin">Guardar</string>

    <string name="course_detail_department">Departamento de</string>
    <string name="classroom">Aula</string>
    <string name="seats">Vacantes</string>

    <string name="disconnected_message"> Houston, tenemos un problema. No podemos conectar con el servidor. La aplicación no funcionará correctamente.</string>

    <string name="search_hint">Search</string>
    <string name="title_activity_week_view">WeekViewActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="shared_prefs">mont.gonzalo.phiuba.shared_preferences</string>
    <string name="pref_logged_user">logged_user</string>
    <string name="title_activity_my_plan">MyPlanActivity</string>
    <string name="menu_courses">Materias</string>
    <string name="menu_events">Eventos</string>
    <string name="menu_news">Novedades</string>
    <string name="menu_departments">Departamentos</string>
    <string name="mune_myplan">Mi plan de estudios</string>
    <string name="menu_myweek">Mi semana</string>
    <string name="NO_SCHEDULES">No se encontraron horarios para esta materia.</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="my_plan_title">Plan de estudios</string>

    <string name="myplan_tab_approved">Aprobadas</string>
    <string name="myplan_tab_studying">Cursando</string>
    <string name="myplan_tab_not_coursed">No cursadas</string>
    <string name="myplan_tab_complete">Plan completo</string>
    <string name="parse_siu_warning">Recordá que la tabla \"Historia Académica\" debe estar visible!</string>
    <string name="myplan_confirm_import_text">Para importar materias desde SIU, es necesario loguearse al sistema con tus credenciales. No te preocupes, las mismas no se guardan ni se transmiten a otro servidor que no sea el de la facultad. Si estás de acuerdo, adelante. Si no, siempre podés agregar tus materias desde la app!</string>
    <string name="myplan_confirm_import_title">Importar materias desde SIU</string>
    <string name="myplan_placeholder_text_title">
        No hay materias en esta sección aún.
    </string>
    <string name="myplan_placeholder_text">
        Probá agregarlas haciendo swipe a la izquierda en la materia que quieras, o importando tu Historia Académica desde SIU (beta)
    </string>
    <string name="pref_user_courses">user_courses</string>
    <string name="requirements">Correlativas</string>
    <string name="action_update">Actualizar</string>
    <string name="add_not_available_course">"Según tus materias aprobadas, no podrías cursar esta materia. Chequeá que tengas aprobada/s: "</string>
    <string name="cant_add_studying_1">"No se puede anotar a más de "</string>
    <string name="cant_add_studying_2">" materias por cuatrimestre"</string>
    <string name="weekview_with">" con "</string>
    <string name="title_activity_settings">Ajustes</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_notifications">Notificaciones de eventos</string>
    <string name="pref_description_notifications">Notificarme sobre nuevos eventos que coincidan con mis términos guardados </string>

    <string name="pref_title_server_ip">IP del servidor</string>
    <string name="pref_default_server_ip">192.168.0.5</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_myplan">Mi plan de estudios</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="tesis_preference_entries">
        <item>Tesis</item>
        <item>Trabajo profesional</item>
    </string-array>

    <string-array name="tesis_preference_entry_values">
        <item>TESIS</item>
        <item>TPPROF</item>
    </string-array>

    <string-array name="branch_preference_default_entries">
        <item>Ninguna orientación</item>
    </string-array>

    <string-array name="branch_preference_default_entry_values">
        <item>@string/default_branch</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_weekview">Mi Semana</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_weekview_auto_hide_title">Ocultar nombres de cátedra</string>
    <string name="pref_weekview_auto_hide_summary">Permite ocultar los nombres de las cátedras y así dar más espacio a la grilla de horarios </string>
    <string name="pref_weekview_hide_collections_title">Evitar superposición</string>
    <string name="pref_weekview_hide_collections_summary">Excluye de las alternativas de horarios aquellas con superposición de cursadas</string>
    <string name="comm">Comunicate</string>
    <string name="nav_share_text">Compartir</string>
    <string name="nav_send_text">Contacto</string>
    <string name="pref_title_event_keywords">Palabras a buscar </string>
    <string name="pref_title_event_desc">Poné las palabras que quieras que aparezcan en los eventos sobre los que recibís notificaciones. Ejemplo \"Inscripciones\", \"quimica\",  \"civil\", etc, separadas pore espacios.
        Tené en cuenta que se buscan los términos dentro del título y el texto de cada evento. </string>
    <string name="pref_category_notifications">Notificaciones</string>
    <string name="pref_category_network">Red</string>
    <string name="pref_title_plan">Carrera y Plan </string>
    <string name="pref_title_branch">Orientación</string>
    <string name="pref_category_speech">Lector de voz</string>
    <string name="pref_description_speech">Esta funcionalidad se activará al hacer un touch prolongado en cualquier titulo o descripcion de un evento. Otro touch prolongado parará la lectura.</string>
    <string name="pref_title_speech">Lectura en novedades</string>
    <string name="pref_title_tesis">Final de carrera</string>

    <string name="default_plan">INFORMA86</string>
    <string name="default_branch">NONE</string>
    <string name="default_tesis">TPPROF</string>

    <string name="myplan_tab_required">Obligatorias</string>
    <string name="myplan_tab_optative">Optativas</string>
    <string name="myplan_tab_branch">De orientación</string>
    <string name="action_stats">Estadísticas</string>
    <string name="action_start_studying">Cursar</string>
    <string name="action_remove_course">Remover</string>
    <string name="action_approve_course">Aprobar</string>
    <string name="pref_category_accessibility">Accesibilidad</string>
    <string name="pref_title_texts">Textos en vez de íconos</string>
    <string name="pref_description_texts">Con esta opción habilitada, los íconos de los menúes serán reemplazados por texto y el código de colores de las materias será acompañado de un texto descriptivo.</string>
    <string name="course_default">\"\"</string>
    <string name="course_added">Favorita</string>
    <string name="course_studyng">Estudiando</string>
    <string name="course_approved">Aprobada</string>
    <string name="course_available">Disponible</string>
    <string name="course_exam_pending">En final</string>
    <string name="course_not_available">No disponible</string>
</resources>
