<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/default_plan"
        android:key="pref_plan"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_plan" />

    <ListPreference
        android:defaultValue="@string/default_branch"
        android:key="pref_branch"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:dependency="pref_plan"
        android:title="@string/pref_title_branch"
        android:entries="@array/branch_preference_default_entries"
        android:entryValues="@array/branch_preference_default_entry_values"/>

</PreferenceScreen>
