<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="mont.gonzalo.phiuba.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="mont.gonzalo.phiuba.SettingsActivity$WeekViewPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_weekview" />

    <header
        android:fragment="mont.gonzalo.phiuba.SettingsActivity$MyPlanPreferenceFragment"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/pref_header_myplan" />
</preference-headers>
